--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">LangSwap</string>
+    <string name="langswap">LangSwap</string>
+    <string name="log_in">Log in</string>
+    <string name="enjoy_and_learn_in_the_same_time">Enjoy And Learn In\nThe Same Time!</string>
+    <string name="start_learning">Start learning</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="full_name">Full Name</string>
+    <string name="enter_your_full_name">Enter your full name</string>
+    <string name="e_mail">E-mail</string>
+    <string name="enter_your_email">Enter your email</string>
+    <string name="phone">Phone</string>
+    <string name="enter_your_phone_number">Enter your phone number</string>
+    <string name="password">Password</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="toggle_password_visibility">Toggle password visibility</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="confirm_your_password">Confirm your password</string>
+    <string name="processing">Processing...</string>
+    <string name="register">Register</string>
 </resources>
